dns/dnscrypt-proxy: Define field type for listen_addresses
* Define type for listen_addresses, worked without,
  but setting it just in case.

--- a/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
@@ -28,6 +28,7 @@
                 </help>
                 <style>tokenize</style>
                 <allownew>true</allownew>
+                <type>select_multiple</type>
             </field>
             <field>
                 <id>settings.allowprivileged</id>
